# wasmcloud-playground

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml  manifest.yaml
api/: Cargo.toml  Makefile
api/src/: lib.rs
front/: Cargo.toml  Makefile  README.md
front/src/: lib.rs
host/: Cargo.toml  Makefile
host/src/: main.rs
todo/: Cargo.toml  Makefile
todo-interface/: Cargo.toml  Makefile  codegen.yaml  todo.widl
todo-interface/src/: generated.rs
todo/src/: lib.rs
web/: Cargo.toml  Makefile
web/html/: index.hb  index.liquid
web/html/scripts/: index.js
web/src/: lib.rs
