[package]
name = "api"
version = "0.0.1"
authors = ["Jan Kühle <jan.kuehle@codecentric.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.64"
wapc-guest = "0.4.0"
wasmcloud-actor-core = { version = "0.2.3", features = ["guest"] }
wasmcloud-actor-http-server = { version = "0.1.2", features = ["guest"] }

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
