[package]
name = "host"
version = "0.1.0"
authors = ["Jan Kühle <jan.kuehle@codecentric.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
wascc-host = "0.14.0"
wascc-httpsrv = { version = "0.8.1", features = ["static_plugin"] }
